2009-07-16 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-action.c:
	* src/common/na-action.h (na_action_get_new_profile_name):
	New function.

	* src/nact/nact-iprofile-conditions.c:
	* src/nact/nact-iprofile-conditions.h:
	Renamed as nact-iconditions.{c,h}.
	IProfileConditions renamed accordingly.

	* src/nact/nact-iprofile-item.c:
	* src/nact/nact-iprofile-item.h: New files.
	Define IProfileItem interface.

	* src/nact/nact-action-conditions-editor.c:
	* src/nact/nact-profile-conditions-editor.c:
	* src/nact/nact-iprefs.c:
	* src/nact/Makefile.am: Updated accordingly.

2009-07-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-action-conditions-editor.c (on_save_clicked):
	New function (do not know why it used to work without it!).

	* src/nact/nact-action-conditions-editor.c
	(set_current_action): Removed function.

	* src/nact/nact-action-profiles-editor.c:
	Begin with the rewriting with the new object hierarchy and the
	new interfaces.

	* src/nact/nact-iprofiles-list.c:
	* src/nact/nact-iprofiles-list.h: New files.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h:
	Remove references to NAPivot, rather use interface.
	Now directly attach the NAAction to each line of the listbox.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/nact-window.c:
	* src/nact/nact-window.h
	(nact_window_get_action, nact_window_get_actions):
	Removed functions.

2009-07-14 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-utils.c:
	Implement na_utils_schema_to_gslist function.

	* src/nact/nact-assist-import.c:
	Write the imported action to the I/O provider.

2009-07-14 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number to 1.11.2.

2009-07-14 Pierre Wieser <pwieser@trychlos.org>

	Implement import assistant with new object hierarchy.

	* src/common/na-action.c:
	* src/common/na-action.h (na_action_get_profile):
	Now returns a NAObject.

	* src/common/na-action.c:
	* src/common/na-action.h