@@ -37,7 +37,6 @@
 #include <common/na-action.h>
 #include <common/na-action-profile.h>
 
-#include "nact-application.h"
 #include "nact-action-profiles-editor.h"
 #include "nact-profile-conditions-editor.h"
 #include "nact-imenu-item.h"
@@ -52,7 +51,6 @@ struct NactActionProfilesEditorClassPrivate {
  */
 struct NactActionProfilesEditorPrivate {
 	gboolean    dispose_has_run;
-	NactWindow *parent;
 	NAAction   *original;
 	NAAction   *edited;
 	gboolean    is_new;
@@ -68,7 +66,7 @@ static void     instance_init( GTypeInstance *instance, gpointer klass );
 static void     instance_dispose( GObject *dialog );
 static void     instance_finalize( GObject *dialog );
 
-static NactActionProfilesEditor *action_profiles_editor_new( BaseApplication *application );
+static NactActionProfilesEditor *action_profiles_editor_new( NactWindow *parent );
 
 static gchar   *do_get_iprefs_window_id( NactWindow *window );
 static gchar   *do_get_dialog_name( BaseWindow *dialog );
@@ -164,11 +162,11 @@ class_init( NactActionProfilesEditorClass *klass )
 	klass->private = g_new0( NactActionProfilesEditorClassPrivate, 1 );
 
 	BaseWindowClass *base_class = BASE_WINDOW_CLASS( klass );
+	base_class->get_toplevel_name = do_get_dialog_name;
 	base_class->initial_load_toplevel = on_initial_load_dialog;
 	base_class->runtime_init_toplevel = on_runtime_init_dialog;
 	base_class->all_widgets_showed = on_all_widgets_showed;
 	base_class->dialog_response = on_dialog_response;
-	base_class->get_toplevel_name = do_get_dialog_name;
 
 	NactWindowClass *nact_class = NACT_WINDOW_CLASS( klass );
 	nact_class->get_iprefs_window_id = do_get_iprefs_window_id;
@@ -259,9 +257,9 @@ instance_finalize( GObject *dialog )
  * toplevel window of the application).
  */
 static NactActionProfilesEditor *
-action_profiles_editor_new( BaseApplication *application )
+action_profiles_editor_new( NactWindow *parent )
 {
-	return( g_object_new( NACT_ACTION_PROFILES_EDITOR_TYPE, PROP_WINDOW_APPLICATION_STR, application, NULL ));
+	return( g_object_new( NACT_ACTION_PROFILES_EDITOR_TYPE, PROP_WINDOW_PARENT_STR, parent, NULL ));
 }
 
 /**
@@ -279,11 +277,7 @@ action_profiles_editor_new( BaseApplication *application )
 void
 nact_action_profiles_editor_run_editor( NactWindow *parent, gpointer user_data )
 {
-	BaseApplication *application = BASE_APPLICATION( base_window_get_application( BASE_WINDOW( parent )));
-	g_assert( NACT_IS_APPLICATION( application ));
-
-	NactActionProfilesEditor *dialog = action_profiles_editor_new( application );
-	dialog->private->parent = parent;
+	NactActionProfilesEditor *dialog = action_profiles_editor_new( parent );
 
 	g_assert( NA_IS_ACTION( user_data ));
 	NAAction *action = NA_ACTION( user_data );
@@ -342,10 +336,6 @@ on_runtime_init_dialog( BaseWindow *dialog )
 	g_debug( "%s: dialog=%p", thisfn, dialog );
 	g_assert( NACT_IS_ACTION_PROFILES_EDITOR( dialog ));
 	NactActionProfilesEditor *editor = NACT_ACTION_PROFILES_EDITOR( dialog );
-
-	GtkWindow *toplevel = base_window_get_toplevel_dialog( dialog );
-	GtkWindow *parent_toplevel = base_window_get_toplevel_dialog( BASE_WINDOW( editor->private->parent ));
-	gtk_window_set_transient_for( toplevel, parent_toplevel );
 
 	setup_dialog_title( editor, FALSE );
 
