@@ -4,9 +4,6 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkDialog" id="ActionsDialog">
     <property name="title" translatable="yes">Nautilus Actions</property>
-    <property name="window_position">center</property>
-    <property name="default_width">300</property>
-    <property name="default_height">350</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
@@ -1415,19 +1412,7 @@ file(s)/folder(s)</property>
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="CancelButton">
-                <property name="label">gtk-cancel</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
+              <placeholder/>
             </child>
             <child>
               <object class="GtkButton" id="SaveButton">
@@ -1454,17 +1439,15 @@ file(s)/folder(s)</property>
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-6">CancelButton</action-widget>
       <action-widget response="-5">SaveButton</action-widget>
     </action-widgets>
   </object>
   <object class="GtkDialog" id="ProfileConditionsDialog">
     <property name="border_width">5</property>
     <property name="modal">True</property>
-    <property name="type_hint">normal</property>
-    <property name="has_separator">False</property>
+    <property name="type_hint">dialog</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox4">
+      <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
@@ -2010,19 +1993,7 @@ file(s)/folder(s)</property>
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="CancelButton">
-                <property name="label">gtk-cancel</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
+              <placeholder/>
             </child>
             <child>
               <object class="GtkButton" id="OKButton">
@@ -2049,7 +2020,6 @@ file(s)/folder(s)</property>
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-6">CancelButton</action-widget>
       <action-widget response="-5">OKButton</action-widget>
     </action-widgets>
   </object>
@@ -2117,8 +2087,8 @@ to extend a selection.</property>
             <property name="visible">True</property>
             <property name="orientation">vertical</property>
             <property name="use_preview_label">False</property>
-            <property name="action">select-folder</property>
             <property name="local_only">False</property>
+            <property name="action">select-folder</property>
             <property name="preview_widget_active">False</property>
           </object>
           <packing>
@@ -2169,8 +2139,8 @@ to extend a selection.</property>
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <property name="use_preview_label">False</property>
-        <property name="select_multiple">True</property>
         <property name="local_only">False</property>
+        <property name="select_multiple">True</property>
         <property name="preview_widget_active">False</property>
       </object>
     </child>
